[gd_scene load_steps=4 format=3 uid="uid://bfquoqtbtk5vx"]

[ext_resource type="Script" path="res://scripts/next_level_screen.gd" id="1_aae0o"]
[ext_resource type="FontFile" uid="uid://chbk54bu10grq" path="res://assets/fonts/Kenney Pixel Square.ttf" id="1_op7bx"]

[sub_resource type="LabelSettings" id="LabelSettings_eq2im"]
font = ExtResource("1_op7bx")
font_size = 24

[node name="NextLevelScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aae0o")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.0705882, 0.156863, 0.380392)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadingContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Heading" type="Label" parent="Content/HeadingContainer"]
layout_mode = 2
text = "Level completed!"
label_settings = SubResource("LabelSettings_eq2im")

[node name="ButtonContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Content/ButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NextLevelButton" type="Button" parent="Content/ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_op7bx")
text = "Continue"

[node name="QuitButton" type="Button" parent="Content/ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_op7bx")
text = "Quit"
